crates/whiphand-tui/tests/snapshots/snapshots__new_run_picker_80x24.snap
---
source: crates/whiphand-tui/tests/snapshots.rs
expression: "render(model, size)"
---
"whiphand  /home/dev/shop  · New run  (experimental)                             "
"┌ New run · pick a workflow ───────────────────────────────────────────────────┐"
"│ Another run is already in progress in this workspace.                        │"
"│ feature  Plan with me, build it, review it.                                  │"
"│ bugfix (global)  Reproduce, fix, verify.                                     │"
"│ old  does not parse: steps: required                                         │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" s start the run  ·  ? help  ·  q back                                          "
