crates/whiphand-tui/tests/snapshots/snapshots__runs_80x24.snap
---
source: crates/whiphand-tui/tests/snapshots.rs
expression: "render(model, size)"
---
"whiphand  /home/dev/shop  · Runs  (experimental)                                "
"┌ Runs ────────────────────────────────────────────────────────────────────────┐"
"│Workflow     Run                      Status              Step         Elapsed│"
"│feature      checkout flow (20261010- running · waiting   plan         5m 0s  │"
"│cycle        20261010-095500-c3d4     running · foreign   fix-cycle    9m 30s │"
"│bugfix       20261009-170000-e5f6 [lo failed                           1h 2m  │"
"│feature      20261009-120000-0789     succeeded                        42s    │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" / filter  ·  n new run  ·  m answer the step waiting on you  ·  o ongoing runs "
