crates/whiphand-tui/tests/snapshots/snapshots__runs_filtered_80x24.snap
---
source: crates/whiphand-tui/tests/snapshots.rs
expression: "render(model, size)"
---
"whiphand  /home/dev/shop  · Runs  (experimental)                                "
"┌ Runs · filter: feat▏ ────────────────────────────────────────────────────────┐"
"│Workflow     Run                      Status              Step         Elapsed│"
"│feature      checkout flow (20261010- running · waiting   plan         5m 0s  │"
"│feature      20261009-120000-0789     succeeded                        42s    │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" type to filter  ·  Enter keep  ·  Esc clear                                    "
